network-policy-allow-ingress-frontend-to-backend-port-80.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backend-only-port-80
  namespace: backend
spec:
  selector: all()
  ingress:
    - action: Allow
      protocol: TCP
      source:
        namespaceSelector: 'projectcalico.org/name == "frontend"'
      destination:
        ports:
          - 80
